[gd_scene load_steps=23 format=2]

[ext_resource path="res://test_tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://players/player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://players/player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/big_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://yellow_gate.tscn" type="PackedScene" id=6]
[ext_resource path="res://players/green-player.png" type="Texture" id=7]
[ext_resource path="res://small_box.tscn" type="PackedScene" id=8]
[ext_resource path="res://cherry_blossoms.tscn" type="PackedScene" id=9]
[ext_resource path="res://transfer_particles.tscn" type="PackedScene" id=10]
[ext_resource path="res://blue_plate.tscn" type="PackedScene" id=11]
[ext_resource path="res://red_plate.tscn" type="PackedScene" id=12]
[ext_resource path="res://music/Main Menu Theme_1b.wav" type="AudioStream" id=13]
[ext_resource path="res://music.tscn" type="PackedScene" id=14]
[ext_resource path="res://white_plate.tscn" type="PackedScene" id=15]
[ext_resource path="res://gate.tscn" type="PackedScene" id=16]
[ext_resource path="res://exit_door.tscn" type="PackedScene" id=17]
[ext_resource path="res://blue_gate.tscn" type="PackedScene" id=18]
[ext_resource path="res://red_gate.tscn" type="PackedScene" id=19]
[ext_resource path="res://yellow_box.tscn" type="PackedScene" id=20]
[ext_resource path="res://yellow_plate.tscn" type="PackedScene" id=21]
[ext_resource path="res://fade.tscn" type="PackedScene" id=22]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="platform" type="StaticBody2D" parent="." groups=[
"platform",
]]
position = Vector2( 0, 17 )
collision_layer = 0
collision_mask = 33
__meta__ = {
"_edit_group_": true
}

[node name="tilemap2" parent="platform" instance=ExtResource( 1 )]

[node name="TileMap" parent="platform/tilemap2" index="0"]
position = Vector2( 0, 8 )

[node name="tilemap" parent="platform" instance=ExtResource( 1 )]

[node name="TileMap" parent="platform/tilemap" index="0"]
show_collision = true
tile_data = PoolIntArray( -5, 7, 0, -4, 7, 0, -3, 7, 0, -2, 7, 0, -1, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0 )

[node name="gate" parent="." instance=ExtResource( 16 )]
position = Vector2( 49, -67 )

[node name="gate2" parent="." instance=ExtResource( 16 )]
position = Vector2( 49, -102 )

[node name="red_gate" parent="." instance=ExtResource( 19 )]
position = Vector2( 109, -67 )

[node name="red_gate2" parent="." instance=ExtResource( 19 )]
position = Vector2( 109, -137 )

[node name="red_gate3" parent="." instance=ExtResource( 19 )]
position = Vector2( 109, -102 )

[node name="yellow_gate" parent="." instance=ExtResource( 6 )]
position = Vector2( 89, -67 )

[node name="yellow_gate2" parent="." instance=ExtResource( 6 )]
position = Vector2( 89, -137 )

[node name="yellow_gate3" parent="." instance=ExtResource( 6 )]
position = Vector2( 89, -102 )

[node name="blue_gate" parent="." instance=ExtResource( 18 )]
position = Vector2( 69, -67 )

[node name="blue_gate2" parent="." instance=ExtResource( 18 )]
position = Vector2( 69, -102 )

[node name="exit_door" parent="." instance=ExtResource( 17 )]
position = Vector2( 49, -32 )

[node name="red_plate" parent="." instance=ExtResource( 12 )]
position = Vector2( -32, -46 )

[node name="blue_plate" parent="." instance=ExtResource( 11 )]
position = Vector2( -53, -46 )

[node name="white_plate" parent="." instance=ExtResource( 15 )]
position = Vector2( -72, -45 )

[node name="Area2D" parent="white_plate" index="1"]
collision_layer = 16
collision_mask = 0

[node name="yellow_plate" parent="." instance=ExtResource( 21 )]
position = Vector2( -92, -45 )

[node name="Area2D" parent="yellow_plate" index="1"]
collision_layer = 64
collision_mask = 0

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Player" parent="." groups=[
"Bodies",
"player",
] instance=ExtResource( 2 )]
position = Vector2( 15, -62 )
push = 5

[node name="player2" parent="." groups=[
"Bodies",
"player",
] instance=ExtResource( 4 )]
position = Vector2( -5, -62 )

[node name="cube" parent="." instance=ExtResource( 8 )]
position = Vector2( -74, -18 )

[node name="Area2D" parent="cube" index="3"]
collision_mask = 2

[node name="yellow_box" parent="." instance=ExtResource( 20 )]
position = Vector2( -41, -19 )
gravity = 600

[node name="point" type="Node2D" parent="."]
visible = false
position = Vector2( 3.89359, -27.621 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="point"]
texture = ExtResource( 7 )

[node name="big_box" parent="." instance=ExtResource( 5 )]
position = Vector2( 70, -35 )

[node name="cherry_blossoms" parent="." instance=ExtResource( 9 )]
position = Vector2( 175, -243 )

[node name="soul_particles" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 57, -51 )

[node name="center" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -80.0

[node name="music" parent="." instance=ExtResource( 14 )]

[node name="cage" type="StaticBody2D" parent="."]
position = Vector2( -1, -544 )
collision_layer = 1048575
collision_mask = 1048575
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="cage"]
position = Vector2( 5, -19 )
rotation = 3.14159
polygon = PoolVector2Array( 15, -15, 173, 64, 5, -39, -171, 59, -8, -16 )

[node name="fade" parent="." instance=ExtResource( 22 )]

[connection signal="area_entered" from="red_plate/Area2D" to="." method="red_plate_triggered"]
[connection signal="area_exited" from="red_plate/Area2D" to="." method="red_plate_released"]
[connection signal="area_entered" from="blue_plate/Area2D" to="." method="blue_plate_triggered"]
[connection signal="area_exited" from="blue_plate/Area2D" to="." method="blue_plate_released"]
[connection signal="area_entered" from="white_plate/Area2D" to="." method="white_plate_triggered"]
[connection signal="area_exited" from="white_plate/Area2D" to="." method="white_plate_released"]
[connection signal="area_entered" from="yellow_plate/Area2D" to="." method="yellow_plate_triggered"]
[connection signal="area_exited" from="yellow_plate/Area2D" to="." method="yellow_plate_released"]
[connection signal="body_entered" from="cube/Area2D" to="." method="smallBoxTouched"]
[connection signal="body_exited" from="cube/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="yellow_box/Area2D" to="." method="yellowBoxTouched"]
[connection signal="body_exited" from="yellow_box/Area2D" to="." method="yellowBoxLeave"]

[editable path="platform/tilemap2"]
[editable path="platform/tilemap"]
[editable path="gate"]
[editable path="red_plate"]
[editable path="blue_plate"]
[editable path="white_plate"]
[editable path="yellow_plate"]
[editable path="Player"]
[editable path="player2"]
[editable path="cube"]
[editable path="yellow_box"]
[editable path="soul_particles"]
[editable path="music"]
[editable path="fade"]
